--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,7 +443,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/Background.jpg") top center;
   background-size: cover;
   position: relative;
   padding: 0;
@@ -479,7 +479,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 span {
-  color: #cda45e;
+  color: red;
 }
 
 #hero h2 {
@@ -743,7 +743,7 @@ section {
 # About
 --------------------------------------------------------------*/
 .about {
-  background: url("../img/about-bg.jpg") center center;
+  background: url("../img/Background2.jpg") center center;
   background-size: cover;
   position: relative;
   padding: 80px 0;
@@ -935,7 +935,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
@@ -1043,7 +1045,7 @@ section {
 # Events
 --------------------------------------------------------------*/
 .events {
-  background: url(../img/events-bg.jpg) center center no-repeat;
+  background: url(../img/Background4.jpg) center center no-repeat;
   background-size: cover;
   position: relative;
 }
